--- a/styles/css/styles.css
+++ b/styles/css/styles.css
@@ -68,7 +68,7 @@
   font-weight: 500;
   font-size: 20px;
   margin: 0;
-  padding: 0 0 16px 0;
+  padding: 0 16px;
   -webkit-box-flex: 1;
   -webkit-flex: 1;
   -ms-flex: 1;
