--- a/styles/css/styles.css
+++ b/styles/css/styles.css
@@ -68,7 +68,6 @@
   font-weight: 500;
   font-size: 20px;
   margin: 0;
-  padding: 0 16px;
   -webkit-box-flex: 1;
   -webkit-flex: 1;
   -ms-flex: 1;
@@ -93,7 +92,6 @@
     cursor: default;
     margin-top: 0px;
     height: 22px;
-    min-width: auto;
     padding: 0 8px;
     display: inline-flex;
     position: fixed;
@@ -122,6 +120,97 @@
   opacity: 0.9;
   transform: none;
   margin-top: 34px; }
+
+.md-side-nav {
+  position: fixed;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  overflow: hidden;
+  pointer-events: none; }
+  .md-side-nav:before {
+    content: '';
+    display: block;
+    position: absolute;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    background: rgba(0, 0, 0, 0.4);
+    opacity: 0;
+    will-change: opacity;
+    -moz-transition: opacity 0.3s cubic-bezier(0, 0, 0.3, 1);
+    -o-transition: opacity 0.3s cubic-bezier(0, 0, 0.3, 1);
+    -webkit-transition: opacity 0.3s cubic-bezier(0, 0, 0.3, 1);
+    transition: opacity 0.3s cubic-bezier(0, 0, 0.3, 1); }
+
+.md-side-nav--visible {
+  pointer-events: auto; }
+  .md-side-nav--visible:before {
+    opacity: 1; }
+  .md-side-nav--visible .md-side-nav__container {
+    -moz-transform: none;
+    -o-transform: none;
+    -webkit-transform: none;
+    -ms-transform: none;
+    transform: none; }
+
+.md-side-nav__container {
+  position: relative;
+  width: 90%;
+  max-width: 400px;
+  background: #FFFFFF;
+  height: 100%;
+  -moz-box-shadow: 16px 0px 32px 0px rgba(0, 0, 0, 0.2);
+  -webkit-box-shadow: 16px 0px 32px 0px rgba(0, 0, 0, 0.2);
+  -ms-box-shadow: 16px 0px 32px 0px rgba(0, 0, 0, 0.2);
+  box-shadow: 16px 0px 32px 0px rgba(0, 0, 0, 0.2);
+  -moz-transform: translateX(-110%);
+  -o-transform: translateX(-110%);
+  -webkit-transform: translateX(-110%);
+  -ms-transform: translateX(-110%);
+  transform: translateX(-110%);
+  display: flex;
+  flex-direction: column;
+  will-change: transform; }
+
+.md-side-nav--animatable .md-side-nav__container {
+  -moz-transition: transform 0.13s cubic-bezier(0, 0, 0.3, 1);
+  -o-transition: transform 0.13s cubic-bezier(0, 0, 0.3, 1);
+  -webkit-transition: transform 0.13s cubic-bezier(0, 0, 0.3, 1);
+  transition: transform 0.13s cubic-bezier(0, 0, 0.3, 1); }
+
+.md-side-nav--visible.side-nav--animatable .md-side-nav__container {
+  -moz-transition: transform 0.33s cubic-bezier(0, 0, 0.3, 1);
+  -o-transition: transform 0.33s cubic-bezier(0, 0, 0.3, 1);
+  -webkit-transition: transform 0.33s cubic-bezier(0, 0, 0.3, 1);
+  transition: transform 0.33s cubic-bezier(0, 0, 0.3, 1); }
+
+.md-side-nav__header {
+  height: 200px;
+  background: #448AFF;
+  color: white;
+  display: flex;
+  padding: 16px;
+  align-items: flex-end;
+  font-size: 24px; }
+
+.md-side-nav__content {
+  padding-top: 32px;
+  flex: 1;
+  list-style: none;
+  padding: 0;
+  margin: 0;
+  overflow-x: hidden;
+  overflow-y: auto;
+  -webkit-overflow-scrolling: touch; }
+  .md-side-nav__content li {
+    height: 48px;
+    line-height: 48px;
+    padding: 0 16px; }
+  .md-side-nav__content li:hover {
+    background: #CCC; }
 
 .md-toolbar__icons:focus .tooltip {
   -moz-transition: 192ms cubic-bezier(0, 0, 0.2, 1);
