--- a/styles/scss/styles.scss
+++ b/styles/scss/styles.scss
@@ -92,7 +92,6 @@ $typefaceSecondary: 'Roboto Mono', monospace;
         cursor: default;
         margin-top: 0px;
         height: 22px;
-        min-width: auto;
         padding: 0 8px;
         display: inline-flex;
         position: fixed;
@@ -114,6 +113,84 @@ $typefaceSecondary: 'Roboto Mono', monospace;
         opacity: 0.9;
         transform: none;
         margin-top: 34px;
+    }
+}
+.md-side-nav {
+    position: fixed;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    overflow: hidden;
+    pointer-events: none;
+    &:before {
+        content: '';
+        display: block;
+        position: absolute;
+        left: 0;
+        top: 0;
+        width: 100%;
+        height: 100%;
+        background: rgba(0,0,0,0.4);
+        opacity: 0;
+        will-change: opacity;
+        @include transition(opacity 0.3s cubic-bezier(0,0,0.3,1));
+    }
+}
+.md-side-nav--visible {
+    pointer-events: auto;
+    &:before {
+        opacity: 1;
+    }
+    .md-side-nav__container {
+        @include transform(none);
+    }
+}
+.md-side-nav__container {
+  position: relative;
+  width: 90%;
+  max-width: 400px;
+  background: $colorCard;
+  height: 100%;
+  @include box-shadow(16px 0px 32px 0px rgba(0, 0, 0, 0.2));
+  @include transform(translateX(-110%));
+  display: flex;
+  flex-direction: column;
+  will-change: transform;
+}
+.md-side-nav--animatable .md-side-nav__container {
+  @include transition(transform 0.13s cubic-bezier(0,0,0.3,1));
+}
+.md-side-nav--visible.side-nav--animatable {
+    .md-side-nav__container {
+        @include transition(transform 0.33s cubic-bezier(0,0,0.3,1));
+    }
+}
+.md-side-nav__header {
+    height: 200px;
+    background: $colorAccent;
+    color: white;
+    display: flex;
+    padding: 16px;
+    align-items: flex-end;
+    font-size: 24px;
+}
+.md-side-nav__content {
+    padding-top: 32px;
+    flex: 1;
+    list-style: none;
+    padding: 0;
+    margin: 0;
+    overflow-x: hidden;
+    overflow-y: auto;
+    -webkit-overflow-scrolling: touch;
+    li {
+        height: 48px;
+        line-height: 48px;
+        padding: 0 16px;
+    }
+    li:hover {
+        background: #CCC;
     }
 }
 .md-toolbar__icons:focus {
