fixed tap highlight color

--- a/styles/scss/styles.scss
+++ b/styles/scss/styles.scss
@@ -9,6 +9,7 @@ $typefaceSecondary: 'Roboto Mono', monospace;
 
 :root {
     font-family: $typefacePrimary;
+    -webkit-tap-highlight-color: transparent;
 }
 .md-card {
     width: 50%;
