--- a/styles/css/styles.css
+++ b/styles/css/styles.css
@@ -26,10 +26,13 @@
 .md-card__subtitle {
   font-size: 14px;
   font-weight: 500;
-  opacity: 0.6; }
+  color: rgba(0, 0, 0, 0.6); }
 
 .md-card__body {
   font-size: 14px; }
+
+.md-content__sticky-header {
+  padding-top: 56px; }
 
 .md-toolbar {
   width: 100%;
@@ -59,16 +62,19 @@
   -webkit-align-content: center;
   -ms-flex-line-pack: center;
   align-content: center;
+  position: fixed;
   background: #FAFAFA;
   -moz-box-shadow: 0px 4px 4px 2px rgba(0, 0, 0, 0.2);
   -webkit-box-shadow: 0px 4px 4px 2px rgba(0, 0, 0, 0.2);
   -ms-box-shadow: 0px 4px 4px 2px rgba(0, 0, 0, 0.2);
   box-shadow: 0px 4px 4px 2px rgba(0, 0, 0, 0.2); }
+  .md-toolbar sticky-header {
+    position: fixed; }
 
 .md-toolbar__title {
   font-weight: 500;
   font-size: 20px;
-  margin: 0;
+  padding-left: 16px;
   -webkit-box-flex: 1;
   -webkit-flex: 1;
   -ms-flex: 1;
@@ -232,4 +238,6 @@
 
 @media (min-width: 600px) {
   .md-toolbar {
-    height: 64px; } }
+    height: 64px; }
+  .md-content__sticky-header {
+    padding-top: 64px; } }
