--- a/styles/scss/styles.scss
+++ b/styles/scss/styles.scss
@@ -28,10 +28,13 @@ $typefaceSecondary: 'Roboto Mono', monospace;
 .md-card__subtitle {
     font-size: 14px;
     font-weight: 500;
-    opacity: 0.6;
+    color: transparentize(black, 0.4);
 }
 .md-card__body {
     font-size: 14px;
+}
+.md-content__sticky-header {
+    padding-top: 56px;
 }
 .md-toolbar {
     width: 100%;
@@ -61,13 +64,17 @@ $typefaceSecondary: 'Roboto Mono', monospace;
     -webkit-align-content: center;
     -ms-flex-line-pack: center;
     align-content: center;
+    position: fixed;
     background: $colorPrimary;
     @include box-shadow(0px 4px 4px 2px rgba(0, 0, 0, 0.2));
+    sticky-header {
+        position: fixed;
+    }
 }
 .md-toolbar__title {
     font-weight: 500;
     font-size: 20px;
-    margin: 0;
+    padding-left: 16px;
     -webkit-box-flex: 1;
     -webkit-flex: 1;
     -ms-flex: 1;
@@ -215,5 +222,8 @@ $typefaceSecondary: 'Roboto Mono', monospace;
 @media (min-width: 600px) {
     .md-toolbar {
         height: 64px;
+    }
+    .md-content__sticky-header {
+        padding-top: 64px;
     }
 }
