--- a/styles/css/styles.css
+++ b/styles/css/styles.css
@@ -4,20 +4,17 @@
   -webkit-tap-highlight-color: transparent; }
 
 .md-card {
-  width: 50%;
   height: auto;
-  margin: 16px auto;
-  padding: 24px;
+  margin: 16px 0;
+  padding: 24px 16px;
   display: block;
   background: #FFFFFF;
-  -moz-border-radius: 2px;
-  -webkit-border-radius: 2px;
-  -ms-border-radius: 2px;
-  border-radius: 2px;
-  -moz-box-shadow: 0px 2px 2px 1px rgba(0, 0, 0, 0.2);
-  -webkit-box-shadow: 0px 2px 2px 1px rgba(0, 0, 0, 0.2);
-  -ms-box-shadow: 0px 2px 2px 1px rgba(0, 0, 0, 0.2);
-  box-shadow: 0px 2px 2px 1px rgba(0, 0, 0, 0.2); }
+  will-change: width, height, box-shadow, border-radius;
+  -moz-transition: 192ms cubic-bezier(0, 0, 0.2, 1);
+  -o-transition: 192ms cubic-bezier(0, 0, 0.2, 1);
+  -webkit-transition: 192ms cubic-bezier(0, 0, 0.2, 1);
+  transition: 192ms cubic-bezier(0, 0, 0.2, 1);
+  border-bottom: solid 1px rgba(0, 0, 0, 0.05); }
 
 .md-card__title {
   font-size: 24px;
@@ -91,6 +88,8 @@
   border: none;
   color: inherit;
   outline: none; }
+  .md-toolbar__icons .md-toolbar__icons-menu {
+    margin: 8px; }
   .md-toolbar__icons .tooltip {
     font-size: 10px;
     font-weight: 500;
@@ -127,6 +126,15 @@
   transform: none;
   margin-top: 34px; }
 
+.md-toolbar__icons:focus .tooltip {
+  -moz-transition: 192ms cubic-bezier(0, 0, 0.2, 1);
+  -o-transition: 192ms cubic-bezier(0, 0, 0.2, 1);
+  -webkit-transition: 192ms cubic-bezier(0, 0, 0.2, 1);
+  transition: 192ms cubic-bezier(0, 0, 0.2, 1);
+  opacity: 0.9;
+  transform: none;
+  margin-top: 34px; }
+
 .md-side-nav {
   position: fixed;
   left: 0;
@@ -146,10 +154,10 @@
     background: rgba(0, 0, 0, 0.4);
     opacity: 0;
     will-change: opacity;
-    -moz-transition: opacity 0.3s cubic-bezier(0, 0, 0.3, 1);
-    -o-transition: opacity 0.3s cubic-bezier(0, 0, 0.3, 1);
-    -webkit-transition: opacity 0.3s cubic-bezier(0, 0, 0.3, 1);
-    transition: opacity 0.3s cubic-bezier(0, 0, 0.3, 1); }
+    -moz-transition: opacity 0.3s cubic-bezier(0.4, 0, 0.2, 1);
+    -o-transition: opacity 0.3s cubic-bezier(0.4, 0, 0.2, 1);
+    -webkit-transition: opacity 0.3s cubic-bezier(0.4, 0, 0.2, 1);
+    transition: opacity 0.3s cubic-bezier(0.4, 0, 0.2, 1); }
 
 .md-side-nav--visible {
   pointer-events: auto; }
@@ -218,15 +226,6 @@
   .md-side-nav__content li:hover {
     background: #CCC; }
 
-.md-toolbar__icons:focus .tooltip {
-  -moz-transition: 192ms cubic-bezier(0, 0, 0.2, 1);
-  -o-transition: 192ms cubic-bezier(0, 0, 0.2, 1);
-  -webkit-transition: 192ms cubic-bezier(0, 0, 0.2, 1);
-  transition: 192ms cubic-bezier(0, 0, 0.2, 1);
-  opacity: 0.9;
-  transform: none;
-  margin-top: 34px; }
-
 .dot:after {
   content: "·";
   opacity: 0.7; }
@@ -236,7 +235,23 @@
   opacity: 0.7; }
 
 @media (min-width: 600px) {
-  .md-toolbar {
-    height: 64px; }
+  .md-card {
+    width: 50%;
+    margin: 16px auto;
+    padding: 24px;
+    -moz-border-radius: 2px;
+    -webkit-border-radius: 2px;
+    -ms-border-radius: 2px;
+    border-radius: 2px;
+    -moz-box-shadow: 0px 2px 2px 1px rgba(0, 0, 0, 0.2);
+    -webkit-box-shadow: 0px 2px 2px 1px rgba(0, 0, 0, 0.2);
+    -ms-box-shadow: 0px 2px 2px 1px rgba(0, 0, 0, 0.2);
+    box-shadow: 0px 2px 2px 1px rgba(0, 0, 0, 0.2);
+    -moz-transition: 192ms cubic-bezier(0, 0, 0.2, 1);
+    -o-transition: 192ms cubic-bezier(0, 0, 0.2, 1);
+    -webkit-transition: 192ms cubic-bezier(0, 0, 0.2, 1);
+    transition: 192ms cubic-bezier(0, 0, 0.2, 1); }
   .md-content__sticky-header {
-    padding-top: 64px; } }
+    padding-top: 64px; }
+  .md-toolbar {
+    height: 64px; } }
