--- a/styles/scss/styles.scss
+++ b/styles/scss/styles.scss
@@ -12,14 +12,14 @@ $typefaceSecondary: 'Roboto Mono', monospace;
     -webkit-tap-highlight-color: transparent;
 }
 .md-card {
-    width: 50%;
     height: auto;
-    margin: 16px auto;
-    padding: 24px;
+    margin: 16px 0;
+    padding: 24px 16px;
     display: block;
     background: $colorCard;
-    @include border-radius(2px);
-    @include box-shadow(0px 2px 2px 1px rgba(0, 0, 0, 0.2));
+    will-change: width, height, box-shadow, border-radius;
+    @include transition(192ms cubic-bezier(0.0, 0.0, 0.2, 1));
+    border-bottom: solid 1px rgba(0, 0, 0, 0.05);
 }
 .md-card__title {
     font-size: 24px;
@@ -91,6 +91,10 @@ $typefaceSecondary: 'Roboto Mono', monospace;
     border: none;
     color: inherit;
     outline: none;
+    
+    .md-toolbar__icons-menu {
+        margin: 8px;
+    }
 
     .tooltip {
         font-size: 10px;
@@ -122,6 +126,14 @@ $typefaceSecondary: 'Roboto Mono', monospace;
         margin-top: 34px;
     }
 }
+.md-toolbar__icons:focus {
+    .tooltip {
+        @include transition(192ms cubic-bezier(0.0, 0.0, 0.2, 1));
+        opacity: 0.9;
+        transform: none;
+        margin-top: 34px;
+    }
+}
 .md-side-nav {
     position: fixed;
     left: 0;
@@ -141,7 +153,7 @@ $typefaceSecondary: 'Roboto Mono', monospace;
         background: rgba(0,0,0,0.4);
         opacity: 0;
         will-change: opacity;
-        @include transition(opacity 0.3s cubic-bezier(0,0,0.3,1));
+        @include transition(opacity 0.3s cubic-bezier(0.4, 0.0, 0.2, 1));
     }
 }
 .md-side-nav--visible {
@@ -200,14 +212,6 @@ $typefaceSecondary: 'Roboto Mono', monospace;
         background: #CCC;
     }
 }
-.md-toolbar__icons:focus {
-    .tooltip {
-        @include transition(192ms cubic-bezier(0.0, 0.0, 0.2, 1));
-        opacity: 0.9;
-        transform: none;
-        margin-top: 34px;
-    }
-}
 
 .dot:after {
     content: "·";
@@ -219,10 +223,18 @@ $typefaceSecondary: 'Roboto Mono', monospace;
 }
 
 @media (min-width: 600px) {
-    .md-toolbar {
-        height: 64px;
+    .md-card {
+        width: 50%;
+        margin: 16px auto;
+        padding: 24px;
+        @include border-radius(2px);
+        @include box-shadow(0px 2px 2px 1px rgba(0, 0, 0, 0.2));
+        @include transition(192ms cubic-bezier(0.0, 0.0, 0.2, 1));
     }
     .md-content__sticky-header {
         padding-top: 64px;
+    }
+    .md-toolbar {
+        height: 64px;
     }
 }
