--- a/styles/css/styles.css
+++ b/styles/css/styles.css
@@ -62,7 +62,6 @@
   background: #FAFAFA;
   -moz-box-shadow: 0px 4px 4px 2px rgba(0, 0, 0, 0.2);
   -webkit-box-shadow: 0px 4px 4px 2px rgba(0, 0, 0, 0.2);
-  -ms-box-shadow: 0px 4px 4px 2px rgba(0, 0, 0, 0.2);
   box-shadow: 0px 4px 4px 2px rgba(0, 0, 0, 0.2); }
   .md-toolbar sticky-header {
     position: fixed; }
@@ -88,8 +87,6 @@
   border: none;
   color: inherit;
   outline: none; }
-  .md-toolbar__icons .md-toolbar__icons-menu {
-    margin: 8px; }
   .md-toolbar__icons .tooltip {
     font-size: 10px;
     font-weight: 500;
@@ -105,7 +102,6 @@
     background: #616161;
     -moz-border-radius: 2px;
     -webkit-border-radius: 2px;
-    -ms-border-radius: 2px;
     border-radius: 2px;
     color: white;
     border: none;
@@ -134,6 +130,9 @@
   opacity: 0.9;
   transform: none;
   margin-top: 34px; }
+
+.md-toolbar__icons-menu {
+  margin: 8px; }
 
 .md-side-nav {
   position: fixed;
@@ -178,7 +177,6 @@
   height: 100%;
   -moz-box-shadow: 16px 0px 32px 0px rgba(0, 0, 0, 0.2);
   -webkit-box-shadow: 16px 0px 32px 0px rgba(0, 0, 0, 0.2);
-  -ms-box-shadow: 16px 0px 32px 0px rgba(0, 0, 0, 0.2);
   box-shadow: 16px 0px 32px 0px rgba(0, 0, 0, 0.2);
   -moz-transform: translateX(-110%);
   -o-transform: translateX(-110%);
@@ -241,11 +239,9 @@
     padding: 24px;
     -moz-border-radius: 2px;
     -webkit-border-radius: 2px;
-    -ms-border-radius: 2px;
     border-radius: 2px;
     -moz-box-shadow: 0px 2px 2px 1px rgba(0, 0, 0, 0.2);
     -webkit-box-shadow: 0px 2px 2px 1px rgba(0, 0, 0, 0.2);
-    -ms-box-shadow: 0px 2px 2px 1px rgba(0, 0, 0, 0.2);
     box-shadow: 0px 2px 2px 1px rgba(0, 0, 0, 0.2);
     -moz-transition: 192ms cubic-bezier(0, 0, 0.2, 1);
     -o-transition: 192ms cubic-bezier(0, 0, 0.2, 1);
