--- a/styles/css/styles.css
+++ b/styles/css/styles.css
@@ -3,6 +3,44 @@
   font-family: "Roboto", sans-serif;
   -webkit-tap-highlight-color: transparent; }
 
+.md-button {
+  min-width: 64px;
+  height: 36px;
+  outline: none;
+  padding: 0 8px;
+  margin: 0 8px;
+  text-transform: uppercase;
+  font-weight: 500;
+  font-family: "Roboto", sans-serif;
+  font-size: 14px;
+  cursor: pointer;
+  border: none;
+  background: transparent;
+  -moz-border-radius: 2px;
+  -webkit-border-radius: 2px;
+  border-radius: 2px;
+  -moz-transition: 192ms cubic-bezier(0, 0, 0.2, 1);
+  -o-transition: 192ms cubic-bezier(0, 0, 0.2, 1);
+  -webkit-transition: 192ms cubic-bezier(0, 0, 0.2, 1);
+  transition: 192ms cubic-bezier(0, 0, 0.2, 1); }
+  .md-button:hover {
+    background: rgba(0, 0, 0, 0.18); }
+
+.md-button.raised {
+  min-width: 88px;
+  background: white;
+  border-bottom: solid 1px rgba(0, 0, 0, 0.05);
+  border-top: solid 1px rgba(255, 255, 255, 0.05);
+  -moz-box-shadow: 0px 2px 2px 1px rgba(0, 0, 0, 0.2);
+  -webkit-box-shadow: 0px 2px 2px 1px rgba(0, 0, 0, 0.2);
+  box-shadow: 0px 2px 2px 1px rgba(0, 0, 0, 0.2); }
+  .md-button.raised:hover {
+    background: #EAEAEA; }
+  .md-button.raised:active {
+    -moz-box-shadow: 0px 8px 8px 4px rgba(0, 0, 0, 0.2);
+    -webkit-box-shadow: 0px 8px 8px 4px rgba(0, 0, 0, 0.2);
+    box-shadow: 0px 8px 8px 4px rgba(0, 0, 0, 0.2); }
+
 .md-card {
   height: auto;
   margin: 16px 0;
@@ -14,7 +52,8 @@
   -o-transition: 192ms cubic-bezier(0, 0, 0.2, 1);
   -webkit-transition: 192ms cubic-bezier(0, 0, 0.2, 1);
   transition: 192ms cubic-bezier(0, 0, 0.2, 1);
-  border-bottom: solid 1px rgba(0, 0, 0, 0.05); }
+  border-bottom: solid 1px rgba(0, 0, 0, 0.05);
+  border-top: solid 1px rgba(255, 255, 255, 0.05); }
 
 .md-card__title {
   font-size: 24px;
@@ -60,9 +99,15 @@
   align-content: center;
   position: fixed;
   background: #FAFAFA;
+  border-bottom: solid 1px rgba(0, 0, 0, 0.05);
+  border-top: solid 1px rgba(255, 255, 255, 0.05);
   -moz-box-shadow: 0px 4px 4px 2px rgba(0, 0, 0, 0.2);
   -webkit-box-shadow: 0px 4px 4px 2px rgba(0, 0, 0, 0.2);
-  box-shadow: 0px 4px 4px 2px rgba(0, 0, 0, 0.2); }
+  box-shadow: 0px 4px 4px 2px rgba(0, 0, 0, 0.2);
+  -moz-transition: 192ms cubic-bezier(0, 0, 0.2, 1);
+  -o-transition: 192ms cubic-bezier(0, 0, 0.2, 1);
+  -webkit-transition: 192ms cubic-bezier(0, 0, 0.2, 1);
+  transition: 192ms cubic-bezier(0, 0, 0.2, 1); }
   .md-toolbar sticky-header {
     position: fixed; }
 
@@ -183,15 +228,19 @@
   -webkit-transform: translateX(-110%);
   -ms-transform: translateX(-110%);
   transform: translateX(-110%);
+  -moz-transition: width 190ms cubic-bezier(0, 0, 0.3, 1);
+  -o-transition: width 190ms cubic-bezier(0, 0, 0.3, 1);
+  -webkit-transition: width 190ms cubic-bezier(0, 0, 0.3, 1);
+  transition: width 190ms cubic-bezier(0, 0, 0.3, 1);
   display: flex;
   flex-direction: column;
-  will-change: transform; }
+  will-change: transform, width; }
 
 .md-side-nav--animatable .md-side-nav__container {
-  -moz-transition: transform 0.13s cubic-bezier(0, 0, 0.3, 1);
-  -o-transition: transform 0.13s cubic-bezier(0, 0, 0.3, 1);
-  -webkit-transition: transform 0.13s cubic-bezier(0, 0, 0.3, 1);
-  transition: transform 0.13s cubic-bezier(0, 0, 0.3, 1); }
+  -moz-transition: transform 190ms cubic-bezier(0, 0, 0.3, 1);
+  -o-transition: transform 190ms cubic-bezier(0, 0, 0.3, 1);
+  -webkit-transition: transform 190ms cubic-bezier(0, 0, 0.3, 1);
+  transition: transform 190ms cubic-bezier(0, 0, 0.3, 1); }
 
 .md-side-nav--visible.side-nav--animatable .md-side-nav__container {
   -moz-transition: transform 0.33s cubic-bezier(0, 0, 0.3, 1);
@@ -200,13 +249,47 @@
   transition: transform 0.33s cubic-bezier(0, 0, 0.3, 1); }
 
 .md-side-nav__header {
-  height: 200px;
-  background: #448AFF;
+  position: relative;
+  background: -moz-linear-gradient(bottom, rgba(0, 0, 0, 0.3) 0%, rgba(0, 0, 0, 0.3) 30%, transparent 100%), url("../../assets/side-nav-header.jpg"), #448AFF;
+  background: -webkit-linear-gradient(bottom, rgba(0, 0, 0, 0.3) 0%, rgba(0, 0, 0, 0.3) 30%, transparent 100%), url("../../assets/side-nav-header.jpg"), #448AFF;
+  background: linear-gradient(to top, rgba(0, 0, 0, 0.3) 0%, rgba(0, 0, 0, 0.3) 30%, transparent 100%), url("../../assets/side-nav-header.jpg"), #448AFF;
+  background-size: cover;
   color: white;
+  font-size: 24px;
   display: flex;
-  padding: 16px;
-  align-items: flex-end;
-  font-size: 24px; }
+  justify-content: flex-end; }
+  .md-side-nav__header:before {
+    display: block;
+    content: "";
+    width: 100%;
+    padding-top: 56.25%; }
+  .md-side-nav__header > .content {
+    position: absolute;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0; }
+  .md-side-nav__header .content {
+    right: unset;
+    top: unset;
+    padding: 16px 16px 0 16px; }
+
+.md-side-nav__header-text {
+  height: 56px;
+  font-family: "Roboto", sans-serif;
+  font-size: 14px;
+  position: absolute;
+  bottom: 0;
+  left: 0; }
+
+.md-side-nav__header-title {
+  font-weight: 500;
+  margin: 0;
+  margin-bottom: 8px; }
+
+.md-side-nav__header-subtitle {
+  font-weight: 400;
+  margin: 0; }
 
 .md-side-nav__content {
   padding-top: 32px;
@@ -223,6 +306,94 @@
     padding: 0 16px; }
   .md-side-nav__content li:hover {
     background: #CCC; }
+
+.md-snackbar {
+  font-family: "Roboto", sans-serif;
+  overflow-y: hidden;
+  box-sizing: border-box;
+  width: 100%;
+  min-height: 48px;
+  max-height: 80px;
+  box-sizing: border-box;
+  background-color: #323232;
+  position: fixed;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  line-height: 22px;
+  padding: 0 24px;
+  bottom: -1000px;
+  text-overflow: ellipsis;
+  border-bottom: solid 1px rgba(0, 0, 0, 0.05);
+  border-top: solid 1px rgba(255, 255, 255, 0.05);
+  -moz-box-shadow: 0px 6px 6px 3px rgba(0, 0, 0, 0.2);
+  -webkit-box-shadow: 0px 6px 6px 3px rgba(0, 0, 0, 0.2);
+  box-shadow: 0px 6px 6px 3px rgba(0, 0, 0, 0.2);
+  -moz-transition: 192ms cubic-bezier(0, 0, 0.2, 1);
+  -o-transition: 192ms cubic-bezier(0, 0, 0.2, 1);
+  -webkit-transition: 192ms cubic-bezier(0, 0, 0.2, 1);
+  transition: 192ms cubic-bezier(0, 0, 0.2, 1);
+  transition: all 0.3s ease-in-out; }
+
+.md-snackbar .action {
+  font-size: 14px;
+  font-family: "Roboto", sans-serif;
+  font-weight: 500;
+  line-height: 32px;
+  height: 36px;
+  min-width: 64px;
+  background: transparent;
+  display: inline-block;
+  border: none;
+  font-size: inherit;
+  text-transform: uppercase;
+  color: #448AFF;
+  text-overflow: ellipsis;
+  -webkit-tap-highlight-color: transparent;
+  outline: transparent;
+  cursor: pointer;
+  border-radius: 2px;
+  margin-left: 24px;
+  opacity: 0;
+  -moz-transition: 192ms cubic-bezier(0, 0, 0.2, 1);
+  -o-transition: 192ms cubic-bezier(0, 0, 0.2, 1);
+  -webkit-transition: 192ms cubic-bezier(0, 0, 0.2, 1);
+  transition: 192ms cubic-bezier(0, 0, 0.2, 1);
+  transition: background 0.1s ease-in-out; }
+  .md-snackbar .action:hover {
+    background: rgba(255, 255, 255, 0.1);
+    -moz-transition: 192ms cubic-bezier(0, 0, 0.2, 1);
+    -o-transition: 192ms cubic-bezier(0, 0, 0.2, 1);
+    -webkit-transition: 192ms cubic-bezier(0, 0, 0.2, 1);
+    transition: 192ms cubic-bezier(0, 0, 0.2, 1); }
+
+.md-snackbar .message {
+  font-size: 14px;
+  font-family: "Roboto", sans-serif;
+  overflow: hidden;
+  position: relative;
+  line-height: 22px;
+  max-height: 44px;
+  font-weight: 400;
+  color: white;
+  opacity: 0;
+  -moz-transition: 192ms cubic-bezier(0, 0, 0.2, 1);
+  -o-transition: 192ms cubic-bezier(0, 0, 0.2, 1);
+  -webkit-transition: 192ms cubic-bezier(0, 0, 0.2, 1);
+  transition: 192ms cubic-bezier(0, 0, 0.2, 1); }
+  .md-snackbar .message:before {
+    content: '...';
+    position: absolute;
+    right: 0;
+    bottom: 0; }
+  .md-snackbar .message:after {
+    content: '';
+    position: absolute;
+    right: 0;
+    width: 1em;
+    height: 1em;
+    margin-top: 0.2em;
+    background: background; }
 
 .dot:after {
   content: "·";
@@ -250,4 +421,17 @@
   .md-content__sticky-header {
     padding-top: 64px; }
   .md-toolbar {
-    height: 64px; } }
+    height: 64px; }
+  .md-snackbar {
+    min-width: 288px;
+    width: auto;
+    max-width: 568px;
+    margin: 24px;
+    bottom: -100px;
+    border-radius: 2px; }
+  .md-side-nav__container {
+    width: 320px;
+    -moz-transition: width 190ms cubic-bezier(0, 0, 0.3, 1);
+    -o-transition: width 190ms cubic-bezier(0, 0, 0.3, 1);
+    -webkit-transition: width 190ms cubic-bezier(0, 0, 0.3, 1);
+    transition: width 190ms cubic-bezier(0, 0, 0.3, 1); } }
