--- a/styles/scss/styles.scss
+++ b/styles/scss/styles.scss
@@ -11,6 +11,38 @@ $typefaceSecondary: 'Roboto Mono', monospace;
     font-family: $typefacePrimary;
     -webkit-tap-highlight-color: transparent;
 }
+.md-button {
+    min-width: 64px;
+    height: 36px;
+    outline: none;
+    padding: 0 8px;
+    margin: 0 8px;
+    text-transform: uppercase;
+    font-weight: 500;
+    font-family: $typefacePrimary;
+    font-size: 14px;
+    cursor: pointer;
+    border: none;
+    background: transparent;
+    @include border-radius(2px);
+    @include transition(192ms cubic-bezier(0.0, 0.0, 0.2, 1));
+    &:hover {
+        background: transparentize(black, 0.82);
+    }
+}
+.md-button.raised {
+    min-width: 88px;
+    background: white;
+    border-bottom: solid 1px rgba(0, 0, 0, 0.05);
+    border-top: solid 1px rgba(255, 255, 255, 0.05);
+    @include box-shadow(0px 2px 2px 1px rgba(0, 0, 0, 0.2));
+    &:hover {
+        background: #EAEAEA;
+    }
+    &:active {
+        @include box-shadow(0px 8px 8px 4px rgba(0, 0, 0, 0.2));
+    }
+}
 .md-card {
     height: auto;
     margin: 16px 0;
@@ -20,6 +52,7 @@ $typefaceSecondary: 'Roboto Mono', monospace;
     will-change: width, height, box-shadow, border-radius;
     @include transition(192ms cubic-bezier(0.0, 0.0, 0.2, 1));
     border-bottom: solid 1px rgba(0, 0, 0, 0.05);
+    border-top: solid 1px rgba(255, 255, 255, 0.05);
 }
 .md-card__title {
     font-size: 24px;
@@ -65,7 +98,10 @@ $typefaceSecondary: 'Roboto Mono', monospace;
     align-content: center;
     position: fixed;
     background: $colorPrimary;
+    border-bottom: solid 1px rgba(0, 0, 0, 0.05);
+    border-top: solid 1px rgba(255, 255, 255, 0.05);
     @include box-shadow(0px 4px 4px 2px rgba(0, 0, 0, 0.2));
+    @include transition(192ms cubic-bezier(0.0, 0.0, 0.2, 1));
     sticky-header {
         position: fixed;
     }
@@ -172,12 +208,13 @@ $typefaceSecondary: 'Roboto Mono', monospace;
   height: 100%;
   @include box-shadow(16px 0px 32px 0px rgba(0, 0, 0, 0.2));
   @include transform(translateX(-110%));
+  @include transition(width 190ms cubic-bezier(0,0,0.3,1));
   display: flex;
   flex-direction: column;
-  will-change: transform;
+  will-change: transform, width;
 }
 .md-side-nav--animatable .md-side-nav__container {
-  @include transition(transform 0.13s cubic-bezier(0,0,0.3,1));
+  @include transition(transform 190ms cubic-bezier(0,0,0.3,1));
 }
 .md-side-nav--visible.side-nav--animatable {
     .md-side-nav__container {
@@ -185,13 +222,37 @@ $typefaceSecondary: 'Roboto Mono', monospace;
     }
 }
 .md-side-nav__header {
-    height: 200px;
-    background: $colorAccent;
+    @include aspect-ratio(16, 9);
+    background: -moz-linear-gradient(bottom, rgba(0,0,0,0.3) 0%, rgba(0,0,0,0.3) 30%, rgba(0,0,0,0) 100%), url('../../assets/side-nav-header.jpg'), $colorAccent;
+    background: -webkit-linear-gradient(bottom, rgba(0,0,0,0.3) 0%,rgba(0,0,0,0.3) 30%,rgba(0,0,0,0) 100%), url('../../assets/side-nav-header.jpg'), $colorAccent;
+    background: linear-gradient(to top, rgba(0,0,0,0.3) 0%,rgba(0,0,0,0.3) 30%,rgba(0,0,0,0) 100%), url('../../assets/side-nav-header.jpg'), $colorAccent;
+    background-size: cover;
     color: white;
-    display: flex;
-    padding: 16px;
-    align-items: flex-end;
     font-size: 24px;
+    display: flex;
+    justify-content: flex-end;
+    .content {
+        right: unset;
+        top: unset;
+        padding: 16px 16px 0 16px;
+    }
+}
+.md-side-nav__header-text {
+    height: 56px;
+    font-family: $typefacePrimary;
+    font-size: 14px;
+    position: absolute;
+    bottom: 0;
+    left: 0;
+}
+.md-side-nav__header-title {
+    font-weight: 500;
+    margin: 0;
+    margin-bottom: 8px;
+}
+.md-side-nav__header-subtitle {
+    font-weight: 400;
+    margin: 0;
 }
 .md-side-nav__content {
     padding-top: 32px;
@@ -210,6 +271,65 @@ $typefaceSecondary: 'Roboto Mono', monospace;
     li:hover {
         background: #CCC;
     }
+}
+.md-snackbar {
+    font-family: $typefacePrimary;
+    overflow-y: hidden;
+    box-sizing: border-box;
+    width: 100%;
+    min-height: 48px;
+    max-height: 80px;
+    box-sizing: border-box;
+    background-color: #323232;
+    position: fixed;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    line-height: 22px;
+    padding: 0 24px;
+    bottom: -1000px;
+    text-overflow: ellipsis;
+    border-bottom: solid 1px rgba(0, 0, 0, 0.05);
+    border-top: solid 1px rgba(255, 255, 255, 0.05);
+    @include box-shadow(0px 6px 6px 3px rgba(0, 0, 0, 0.2));
+    @include transition(192ms cubic-bezier(0.0, 0.0, 0.2, 1));
+    transition: all 0.3s ease-in-out;
+}
+.md-snackbar .action {
+    font-size: 14px;
+    font-family: $typefacePrimary;
+    font-weight: 500;
+    line-height: 32px;
+    height: 36px;
+    min-width: 64px;
+    background: transparent;
+    display: inline-block;
+    border: none;
+    font-size: inherit;
+    text-transform: uppercase;
+    color: $colorAccent;
+    text-overflow: ellipsis;
+    -webkit-tap-highlight-color: transparent;
+    outline: transparent;
+    cursor: pointer;
+    border-radius: 2px;
+    margin-left: 24px;
+    opacity: 0;
+    @include transition(192ms cubic-bezier(0.0, 0.0, 0.2, 1));
+    transition: background 0.1s ease-in-out;
+    &:hover {
+        background: rgba(255, 255, 255, 0.1);
+        @include transition(192ms cubic-bezier(0.0, 0.0, 0.2, 1));
+    }
+}
+.md-snackbar .message {
+    font-size: 14px;
+    font-family: $typefacePrimary;
+    @include multiLineEllipsis($lineHeight: 22px, $lineCount: 2, $bgColor: background);  
+    font-weight: 400;
+    color: white;
+    opacity: 0;
+    @include transition(192ms cubic-bezier(0.0, 0.0, 0.2, 1));
 }
 
 .dot:after {
@@ -235,5 +355,17 @@ $typefaceSecondary: 'Roboto Mono', monospace;
     }
     .md-toolbar {
         height: 64px;
+    }
+    .md-snackbar {
+        min-width: 288px;
+        width: auto;
+        max-width: 568px;
+        margin: 24px;
+        bottom: -100px;
+        border-radius: 2px;
+    }
+    .md-side-nav__container {
+        width: 320px;
+        @include transition(width 190ms cubic-bezier(0,0,0.3,1));
     }
 }
